# arewefastyet

./: .gitignore  Cargo.toml  LICENSE.md  README.md  collect_samples.sh
cmd/: Cargo.toml
cmd/src/: cargo.rs  main.rs  profile.rs  repo.rs  rustup.rs  store.rs  system.rs
data/: repos.json  results-16-8981289498934930224.json  results-2-4397104837942437864.json  results-4-16089850688164196755.json  results-4-3384514603728156921.json  results-8-11832863695586434947.json  results-8-3785745892467657219.json  results-workstation.json  results.json
site/: gatsby-config.js  package-lock.json  package.json
site/components/: appcontainer.tsx  linechart.tsx
site/data/: chartData.ts  math.ts  profiling.ts  results.ts  tmp.json  types.ts
site/pages/: _app.tsx  faq.tsx  index.tsx
site/results/: results.json
site/src/components/: linechart.js
site/src/pages/: index.js
site/static/: results.json
site/styles/: Home.module.css  globals.css
site2/: package-lock.json  package.json
site2/components/: linechart.tsx
site2/data/: math.ts  profiling.ts
site2/pages/: index.tsx
site2/pages/api/: hello.ts
src/: cargo.rs  command.rs  main.rs  repo.rs  repos.json  rustup.rs  store.rs
