[package]
name = "arewefastyet"
version = "0.1.0"
authors = ["Krishna Sundarram <krishna.sundarram@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
enum-iterator = "0.6"
num_cpus = "1.13"
once_cell = "1.4"
parse_duration = "2.1"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
